Fix vertical alignment of title

--- a/client/src/components/NavigationBar/NavigationBar.css
+++ b/client/src/components/NavigationBar/NavigationBar.css
@@ -1,16 +1,20 @@
 .navigation-bar {
-  background-color: #FFF;
+  background-color: #fff;
   padding: 15px 30px;
   display: flex;
   justify-content: space-between;
   flex-shrink: 0;
   position: relative;
   z-index: 10000;
-  box-shadow: rgba(0,0,0,0.05) 0 1px;
+  box-shadow: rgba(0, 0, 0, 0.05) 0 1px;
 }
 
 .navigation-bar h1 {
   color: #304556;
   font-size: 24px;
-  line-height: 35px;
+}
+
+.content {
+  display: flex;
+  align-items: center;
 }
